--- a/views/notAdminError.ejs
+++ b/views/notAdminError.ejs
@@ -1,3 +1,14 @@
 <%- include("templates/header") %> 
-<h2>Access Denied! You are not an admin.</h2>
+
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="alert alert-danger text-center" role="alert">
+        <h4 class="alert-heading">Access Denied!</h4>
+        <p>You are not an admin.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
 <%- include("templates/footer") %> 
