--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,21 +1,30 @@
 <%- include("templates/header") %> 
-<h1>Admin Panel</h1>
 
-<% users.forEach(user => { %>
-  <div class="user">
-    <h2><%= user.username %></h2>
-    <p>(<%= user.user_type %>)</p>
+<div class="container my-5">
+  <h1 class="text-center mb-4">Admin Panel</h1>
 
-    <form action="/promoteUser" method="POST">
-      <input type="hidden" name="username" value="<%= user.username %>">
-      <button type="submit">Promote to Admin</button>
-    </form>
+  <div class="row g-4">
+    <% users.forEach(user => { %>
+      <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="card h-100 shadow">
+          <div class="card-body">
+            <h5 class="card-title"><%= user.username %></h5>
+            <p class="card-text">Role: <strong><%= user.user_type %></strong></p>
 
-    <form action="/demoteUser" method="POST">
-      <input type="hidden" name="username" value="<%= user.username %>">
-      <button type="submit">Demote to User</button>
-    </form>
+            <form action="/promoteUser" method="POST" class="mb-2">
+              <input type="hidden" name="username" value="<%= user.username %>">
+              <button type="submit" class="btn btn-success w-100">Promote to Admin</button>
+            </form>
+
+            <form action="/demoteUser" method="POST">
+              <input type="hidden" name="username" value="<%= user.username %>">
+              <button type="submit" class="btn btn-danger w-100">Demote to User</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    <% }) %>
   </div>
-<% }) %>
+</div>
 
 <%- include("templates/footer") %>
