--- a/views/duplicateUserError.ejs
+++ b/views/duplicateUserError.ejs
@@ -1,3 +1,14 @@
 <%- include("templates/header") %> 
-<p>'User already exists! <br><a href="/login">Login</a>'</p>
+
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="alert alert-warning text-center" role="alert">
+        <p class="mb-2">User already exists!</p>
+        <a href="/login" class="btn btn-primary">Login</a>
+      </div>
+    </div>
+  </div>
+</div>
+
 <%- include("templates/footer") %> 
