--- a/views/homeLogged.ejs
+++ b/views/homeLogged.ejs
@@ -1,5 +1,14 @@
 <%- include("templates/header") %> 
-<h1> Hello <%= username %>!</h1><br>
-<a href='/members'>Go to members section</a><br>
-<a href='/logout'>Logout</a>
+
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8 text-center">
+      <h1 class="mb-4">Hello <%= username %>!</h1>
+
+      <a href="/members" class="btn btn-primary mb-2">Go to Members Section</a><br>
+      <a href="/logout" class="btn btn-secondary">Logout</a>
+    </div>
+  </div>
+</div>
+
 <%- include("templates/footer") %> 
