--- a/views/homeUnlogged.ejs
+++ b/views/homeUnlogged.ejs
@@ -1,3 +1,13 @@
 <%- include("templates/header") %> 
-<br><a href='/signup'>Sign up</a><br><a href='/login'>Login</a><br>
+
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6 text-center">
+      <h2 class="mb-4">Welcome!</h2>
+      <a href="/signup" class="btn btn-primary mb-3">Sign Up</a><br>
+      <a href="/login" class="btn btn-secondary">Login</a>
+    </div>
+  </div>
+</div>
+
 <%- include("templates/footer") %> 
