--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,26 @@
 <%- include("templates/header") %> 
-<form action='/loggingin' method='POST'>
-    <input type='email' name='email' placeholder='Enter your email' required>
-    <input type='password' name='password' placeholder='Enter a Password' required>
-    <input type='submit' value='Submit'>
-</form>
-<%- include("templates/footer") %> 
+
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card shadow">
+        <div class="card-body">
+          <h3 class="card-title text-center mb-4">Login</h3>
+          <form action="/loggingin" method="POST">
+            <div class="mb-3">
+              <label for="email" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">Password</label>
+              <input type="password" class="form-control" id="password" name="password" placeholder="Enter a password" required>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<%- include("templates/footer") %>
