--- a/views/noUserError.ejs
+++ b/views/noUserError.ejs
@@ -1,3 +1,14 @@
 <%- include("templates/header") %> 
-<h2>No user detected. Please log in.</h2>
+
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="alert alert-warning text-center" role="alert">
+        <h4 class="alert-heading">No User Detected</h4>
+        <p>Please log in to continue.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
 <%- include("templates/footer") %> 
