--- a/views/passwordError.ejs
+++ b/views/passwordError.ejs
@@ -1,3 +1,14 @@
 <%- include("templates/header") %> 
-<p>Invalid password! <br><a href="/login">Login</a></p>
+
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="alert alert-danger text-center" role="alert">
+        <p class="mb-3">Invalid password!</p>
+        <a href="/login" class="btn btn-primary">Try Logging In Again</a>
+      </div>
+    </div>
+  </div>
+</div>
+
 <%- include("templates/footer") %> 
