--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,8 +1,30 @@
 <%- include("templates/header") %> 
-<form action='/createUser' method='POST'>
-    <input type='text' name='username' placeholder='Enter a user name' required>
-       <input type='email' name='email' placeholder='Enter your email' required>
-        <input type='password' name='password' placeholder='Enter a Password' required>
-       <input type='submit' value='Submit'>
-</form>
-<%- include("templates/footer") %> 
+
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card shadow">
+        <div class="card-body">
+          <h3 class="card-title text-center mb-4">Sign Up</h3>
+          <form action="/createUser" method="POST">
+            <div class="mb-3">
+              <label for="username" class="form-label">Username</label>
+              <input type="text" class="form-control" id="username" name="username" placeholder="Enter a user name" required>
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">Password</label>
+              <input type="password" class="form-control" id="password" name="password" placeholder="Enter a password" required>
+            </div>
+            <button type="submit" class="btn btn-success w-100">Submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<%- include("templates/footer") %>
