--- a/views/sqlInjection.ejs
+++ b/views/sqlInjection.ejs
@@ -1,3 +1,16 @@
 <%- include("templates/header") %> 
-<p>Invalid username! SQL injection detected!</p>
+
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="alert alert-danger text-center" role="alert">
+        <h4 class="alert-heading">Invalid Username</h4>
+        <p>Potential SQL or NoSQL injection attempt detected. Please use valid input.</p>
+        <hr>
+        <a href="/login" class="btn btn-primary mt-2">Return to Login</a>
+      </div>
+    </div>
+  </div>
+</div>
+
 <%- include("templates/footer") %> 
